finalized maintenance file

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,2 +1,18 @@
  @article{Zhang_2023, title={A Bayesian region of measurement equivalence (ROME) approach for establishing measurement invariance.}, volume={28}, ISSN={1082-989X}, url={http://dx.doi.org/10.1037/met0000455}, DOI={10.1037/met0000455}, number={4}, journal={Psychological Methods}, publisher={American Psychological Association (APA)}, author={Zhang, Yichi and Lai, Mark H. C. and Palardy, Gregory J.}, year={2023}, month=aug, pages={993–1004} }
 
+ @article{Cappelli_2023, title={Individual Mobility across Clusters: The Impact of Ignoring Cross-Classified Data Structures in Discrete-Time Survival Analysis}, volume={59}, ISSN={1532-7906}, url={http://dx.doi.org/10.1080/00273171.2023.2230481}, DOI={10.1080/00273171.2023.2230481}, number={1}, journal={Multivariate Behavioral Research}, publisher={Informa UK Limited}, author={Cappelli, Christopher J. and Leroux, Audrey J. and Masyn, Katherine E.}, year={2023}, month=sep, pages={171–186} }
+
+@Article{Cappelli_2023,
+  title = {Individual Mobility across Clusters: The Impact of Ignoring Cross-Classified Data Structures in Discrete-Time Survival Analysis},
+  volume = {59},
+  issn = {1532-7906},
+  url = {http://dx.doi.org/10.1080/00273171.2023.2230481},
+  doi = {10.1080/00273171.2023.2230481},
+  number = {1},
+  journal = {Multivariate Behavioral Research},
+  publisher = {Informa UK Limited},
+  author = {Christopher J. Cappelli and Audrey J. Leroux and Katherine E. Masyn},
+  year = {2024},
+  month = {sep},
+  pages = {171–186},
+}
