--- a/instructions/lab_web_maintenance.Rmd
+++ b/instructions/lab_web_maintenance.Rmd
@@ -3,8 +3,11 @@ title: "Leroux Lab Website Maintenance Routine"
 author: "Yichi Zhang"
 date: "1/27/2026"
 output:
+  pdf_document:
+    toc: true
+    toc_depth: '3'
   html_document:
-    toc: yes
+    toc: true
     toc_depth: 3
 ---
 
